k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: notes-svc
  namespace: notes-ns
spec:
  selector:
    app: notes-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
