k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-app-ingress
  namespace: notes-ns
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/nginx.ingress.allow-http: "false"
spec:
  rules:
    - host: notes.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notes-svc
                port:
                  number: 8000
